--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,10 @@
     align-self: center
 }
 
+.appbar-icon {
+    height: 36px
+}
+
 .directory-filters {
     display: flex;
     justify-content: space-between;
