--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
     justify-content: center;
 }
 
-.scholar-tabs {
+.directory-tabs {
     display: flex;
     column-gap: 8px;
 }
@@ -32,4 +32,18 @@
 
 .content {
     text-align: left;
+}
+
+.history-header {
+    padding: 24px 0;
+    display: flex
+}
+
+.bottomNav-text {
+    align-items: center;
+}
+
+.heart-icon {
+    height: .5em!important;
+    width: .5em!important;
 }
